# demviz

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py
demviz/: __init__.py  interactor.py  map_grid.py  reader.py  visualizer.py  vtk_grid.py
tests/: srtm.tif  test_interactor.py  test_map_grid.py  test_reader.py  test_visualizer.py  test_vtk_grid.py
