[project]
name = "demviz"
version = "0.1.0"
description = "A Python package for visualizing DEM files with VTK and map grid overlays."
readme = "README.md"
authors = [{ name = "Lerry William Seling", email = "lerryws@sains.com.my" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "vtk>=9.0.0",
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "GDAL>=3.0.0",
]

[project.scripts]
demviz = "demviz.visualizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/wslerry/demviz"
Repository = "https://github.com/wslerry/demviz.git"
Issues = "https://github.com/wslerry/demviz/issues"